[gd_scene load_steps=14 format=3 uid="uid://b6p6r7uvspqvo"]

[ext_resource type="FontFile" uid="uid://bromsfi4f0cgw" path="res://assets/fonts/GamjaFlower-Regular.ttf" id="1_ee8wn"]
[ext_resource type="Texture2D" uid="uid://c6hxhwvfieews" path="res://assets/icons/kenney/rewind.png" id="1_uhylo"]
[ext_resource type="Script" path="res://scenes/levels/LevelUI.gd" id="1_vses1"]
[ext_resource type="Texture2D" uid="uid://cvxx2n1wmffk8" path="res://assets/icons/kenney/return.png" id="2_l0f45"]
[ext_resource type="Texture2D" uid="uid://t1wj1lnutcou" path="res://assets/icons/kenney/fastForward.png" id="3_jalx4"]
[ext_resource type="Texture2D" uid="uid://d28uuuec52qa5" path="res://assets/icons/kenney/menuGrid.png" id="6_rt44m"]

[sub_resource type="LabelSettings" id="LabelSettings_gf2bh"]
font = ExtResource("1_ee8wn")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_a5p06"]
font = ExtResource("1_ee8wn")
font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uemfm"]
bg_color = Color(0.001, 0.035, 0.026, 0.811)

[sub_resource type="LabelSettings" id="LabelSettings_78hhw"]
font = ExtResource("1_ee8wn")
font_size = 40
shadow_size = 4
shadow_color = Color(0.174691, 0.501312, 0.39972, 0.74902)

[sub_resource type="Animation" id="Animation_x8p0i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelClearPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 250)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LevelClearPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LevelClearPanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LevelBox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StatsBox:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l75w1"]
resource_name = "lev_clear"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelClearPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(0, 250)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LevelClearPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.133333, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LevelClearPanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LevelBox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StatsBox:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_next_level_pressed"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o8qou"]
_data = {
"RESET": SubResource("Animation_x8p0i"),
"lev_clear": SubResource("Animation_l75w1")
}

[node name="LevelUi" type="CanvasLayer"]
script = ExtResource("1_vses1")

[node name="LevelBox" type="MarginContainer" parent="."]
offset_right = 135.0
offset_bottom = 55.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="LevelBox"]
layout_mode = 2

[node name="LevelName" type="Label" parent="LevelBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level x"
label_settings = SubResource("LabelSettings_gf2bh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Navigations" type="HBoxContainer" parent="LevelBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PreviousLevel" type="TextureButton" parent="LevelBox/VBoxContainer/Navigations"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture_normal = ExtResource("1_uhylo")
ignore_texture_size = true
stretch_mode = 5

[node name="RestartLevel" type="TextureButton" parent="LevelBox/VBoxContainer/Navigations"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture_normal = ExtResource("2_l0f45")
ignore_texture_size = true
stretch_mode = 5

[node name="NextLevel" type="TextureButton" parent="LevelBox/VBoxContainer/Navigations"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture_normal = ExtResource("3_jalx4")
ignore_texture_size = true
stretch_mode = 5

[node name="LevelsList" type="TextureButton" parent="LevelBox/VBoxContainer/Navigations"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture_normal = ExtResource("6_rt44m")
ignore_texture_size = true
stretch_mode = 5

[node name="StatsBox" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="StatsBox"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsBox/VBoxContainer"]
layout_mode = 2
text = "Score"
label_settings = SubResource("LabelSettings_gf2bh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="StatsBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0/1"
label_settings = SubResource("LabelSettings_a5p06")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelClearPanel" type="Panel" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -74.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uemfm")

[node name="Label" type="Label" parent="LevelClearPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Level Clear!"
label_settings = SubResource("LabelSettings_78hhw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o8qou")
}

[connection signal="pressed" from="LevelBox/VBoxContainer/Navigations/PreviousLevel" to="." method="_on_previous_level_pressed"]
[connection signal="pressed" from="LevelBox/VBoxContainer/Navigations/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="LevelBox/VBoxContainer/Navigations/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="LevelBox/VBoxContainer/Navigations/LevelsList" to="." method="_on_levels_list_pressed"]
